2004-07-04  Laurent Sansonetti  <lrz@gnome.org>

	* data/alexandria/glade/new_book_dialog.glade,
	  lib/alexandria/ui/new_book_dialog.rb:

	- Removed the first label ;
	- The dialog is now resizable on search purposes.

	* lib/alexandria/library.rb:

	Fixed a bug when removing a book that doesn't have any cover image.

=== Alexandria 0.3.0 ===

2004-07-03  Laurent Sansonetti  <lrz@gnome.org>

	* README:

	Updated for 0.3.0.

	* RELEASE_CHECKLIST:

	Added the README step.

2004-06-30  Laurent Sansonetti  <lrz@gnome.org>
	
	* NEWS:

	Updated for 0.3.0. 

2004-06-27  Laurent Sansonetti  <lrz@gnome.org>

	* RELEASE_CHECKLIST,
	  make_release.sh:

	Added.

	* lib/alexandria.rb:

	Includes version.rb (automatically generated).

	* lib/alexandria/.cvsignore:

	Ignores version.rb.

	* lib/alexandria/pre-setup.rb:

	Generates version.rb.

2004-06-25  Laurent Sansonetti  <lrz@gnome.org>
	
	* README:

	Incremented Ruby/Amazon's version (0.8.2 -> 0.8.3).

	* lib/alexandria/preferences.rb:

	Added code to retrieve GNOME HTTP proxy configuration.

	* lib/alexandria/book_providers/amazon.rb,
	  lib/alexandria/book_providers/proxis.rb:

	Pass HTTP connections to the proxy defined in the GNOME configuration
	if exists.

2004-06-23  Laurent Sansonetti  <lrz@gnome.org>

	* data/alexandria/glade/preferences_dialog.glade,
	  lib/alexandria/ui/preferences_dialog.rb:

	Implemented "up" and "down" buttons in the providers list.

	* schemas/alexandria.schemas:
	
	Added the "providers_priority" variable.

	* lib/alexandria/book_providers.rb,
	  lib/alexandria/book_providers/amazon.rb,
	  lib/alexandria/book_providers/proxis.rb:

	- Introduced GenericProviders, the base class for all providers ;
	- Introduced providers priority.

2004-06-22  Pascal Terjan  <pterjan@linuxfr.org>

	* lib/alexandria/book_providers/proxis.rb:

	- Moved book creation to parse_book ;
	- Added a preference for the language ;
	- Encode search criterion.

2004-06-21  Laurent Sansonetti  <lrz@gnome.org>
