@@ -1,3 +1,12 @@
+2004-07-05  Laurent Sansonetti  <lrz@gnome.org>
+
+	* lib/alexandria/ui/main_app.rb:
+
+	- Fixed a bug when trying to sort icons by rating when books didn't
+	  have rating yet ;
+	- Fixed a bug in the sorting method (edition and publisher was
+	  inversed).
+
 2004-07-04  Laurent Sansonetti  <lrz@gnome.org>
 
 	* data/alexandria/glade/new_book_dialog.glade,
